# libpak

./: Android.mk  CMakeLists.txt  Makefile  Makefile.wasm  pak_file.c  pak_file.h  pak_log.c  pak_log.h  readme.md
pak/: Makefile  pak.c  setup.sh
